--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
             <version>1.8.0</version>
             <!--            <scope>provided</scope>-->
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-kafka -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka_2.12</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
