--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/$PRODUCT_WORKSPACE_FILE$
+.idea/.gitignore
+.idea/artifacts/
+.idea/compiler.xml
+.idea/flink-learn.iml
+.idea/libraries/
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+target/generated-sources/
+target/maven-archiver/
+target/maven-status/
